// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`figmaTheme/buildThemeFiles builds theme files for nested themes 1`] = `
Object {
  "theme1": Object {
    "colors": Object {
      "black": "#000000",
      "brand": Object {
        "green": "#219653",
        "orange": "orange",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": Object {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "grey",
        "10": "#f9f9f9",
      },
      "theme": Object {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
    "spacing": Object {
      "default": "2",
    },
  },
  "theme2": Object {
    "colors": Object {
      "black": "#000000",
      "brand": Object {
        "green": "#219653",
        "orange": "purple",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": Object {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "#f6f6f6",
        "10": "#f9f9f9",
      },
      "theme": Object {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
    "spacing": Object {
      "default": "2",
    },
  },
  "themes": Object {
    "themes": Array [
      "theme1",
      "theme2",
    ],
  },
}
`;

exports[`figmaTheme/buildThemeFiles builds theme files for source themes 1`] = `
Object {
  "theme1": Object {
    "colors": Object {
      "brand": Object {
        "orange": "orange",
      },
      "grey": Object {
        "09": "grey",
      },
      "theme": Object {
        "primary": "",
      },
    },
  },
  "theme2": Object {
    "colors": Object {
      "brand": Object {
        "orange": "purple",
      },
      "theme": Object {
        "primary": "",
      },
    },
  },
  "themes": Object {
    "themes": Array [
      "theme1",
      "theme2",
    ],
  },
}
`;

exports[`figmaTheme/buildThemeFiles builds theme files for themes 1`] = `
Object {
  "theme1": Object {
    "colors": Object {
      "black": "#000000",
      "brand": Object {
        "green": "#219653",
        "orange": "orange",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": Object {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "grey",
        "10": "#f9f9f9",
      },
      "theme": Object {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
  },
  "theme2": Object {
    "colors": Object {
      "black": "#000000",
      "brand": Object {
        "green": "#219653",
        "orange": "purple",
        "purple": "#6f53f9",
        "red": "#eb5757",
        "teal": "#31839b",
      },
      "grey": Object {
        "00": "#07131f",
        "01": "#6a6e80",
        "02": "#949494",
        "03": "#b5b5b5",
        "08": "#f4f4f4",
        "09": "#f6f6f6",
        "10": "#f9f9f9",
      },
      "theme": Object {
        "primary": "",
        "secondary": "#31839b",
        "tertiary": "#eb5757",
      },
      "white": "#ffffff",
    },
  },
  "themes": Object {
    "themes": Array [
      "theme1",
      "theme2",
    ],
  },
}
`;
